@@ -11,6 +11,7 @@ path.albedospecular.glossinessthreshold = 0.05
 film.imagepipelines.0.0.type = GAMMA_CORRECTION
 film.imagepipelines.0.0.value = 2.2
 film.imagepipelines.1.0.type = INTEL_OIDN
+film.imagepipelines.1.0.prefilter.enable = 1
 film.imagepipelines.1.1.type = GAMMA_CORRECTION
 film.imagepipelines.1.1.value = 2.2
 ##
