@@ -736,7 +736,9 @@ ImagePipeline *Film::CreateImagePipeline(const Properties &props, const string &
 				const string filterType = props.Get(Property(prefix + ".filter.type")("RT")).Get<string>();
 				const int oidnMemLimit = props.Get(Property(prefix + ".oidnmemory")(6000)).Get<int>();
 				const float sharpness = Clamp(props.Get(Property(prefix + ".sharpness")(.1f)).Get<float>(), 0.f, 1.f);
-				imagePipeline->AddPlugin(new IntelOIDN(filterType, oidnMemLimit, sharpness));
+				const bool enablePrefiltering = props.Get(Property(prefix + ".prefilter.enable")(true)).Get<bool>();
+
+				imagePipeline->AddPlugin(new IntelOIDN(filterType, oidnMemLimit, sharpness, enablePrefiltering));
 #endif
 			} else if (type == "WHITE_BALANCE") {
 				const float temperature = Clamp(props.Get(Property(prefix + ".temperature")(6500.f)).Get<float>(), 1000.f, 40000.f);
